spec: writing message features: chat scrolling, users presence scrolling