@@ -4,7 +4,41 @@ Implementation of the Chadow protocole described in [rfc_chadow.txt](./rfc_chado
 
 http://igm.univ-mlv.fr/coursprogreseau/tds/projet2024.html
 
-### Sources:
+
+### run
+```sh
+# find your terminal size first
+$ stty size 
+25 238
+$ java -jar --enable-preview target/chadow-1.0.0.jar localhost 7777 25 238
+```
+
+### Chadow client CLI
+By default, the main view is in live reload and shows the new messages and connected users in real time.
+Because it needs to clear up the screen, meaning that the user can't type commands or messages at the same time 
+('live reload' mode is indicated by the user's login being greyed out)
+The user has to press enter to enter the 'input' mode. (the user's login is then shown in color);
+
+The input field allows multiline input. It works by escaping by writing '\' before pressing enter. 
+In 'message mode' any input that is not a command is considered as message to be sent to the server.
+
+The user can type the following commands:
+
+| Command       | Description                                                                                     |
+|---------------|-------------------------------------------------------------------------------------------------|
+| :m (:message) | select the default mode (message mode) described above                                          |
+| :c (:chat)    | to scroll on the chat (stops live reload), scroll with e (up) and s (down) |
+| :u (:users)   | to scroll on list of connected users (stops live reload), scroll with e (up) and s (down)       |
+
+
+@Todo<br>
+:q :quit<br> 
+:h :help<br>
+
+
+
+
+### Sources
 
 RFC:
 https://www.ietf.org/rfc/rfc3285.txt
